<resources>
    <string name="app_name">GestaoFinanceira</string>
    <string name="nomeUsuario">Insira seu Nome:</string>
    <string name="editTextNomeUser">Nome Usuario</string>
    <string name="contasPagar">Contas à Pagar:</string>
    <string name="checkAluguel">Aluguel</string>
    <string name="checkMercado">Mercado</string>
    <string name="buttonLimpar">Limpar</string>
    <string name="buttonSalvar">Salvar</string>
    <string name="nenhuma_opcao">Selecione uma opção de contas à pagar!</string>
    <string name="selecionado">Foram selecionados</string>
    <string name="mensagem_desmarcar">Todos itens desmarcados!</string>
    <string name="sexoUser">Informe seu genero:</string>
    <string name="radioMas">Masculino</string>
    <string name="radioFem">Feminino</string>
    <string name="foiSelecionado">foi selecionado</string>
    <string name="nenhuma_op">Nenhuma opção selecionada</string>
    <string name="vencimento">Escolha uma data de vencimento:</string>
    <string name="venc1">5</string>
    <string name="venc2">10</string>
    <string name="venc3">15</string>
    <string name="venc4">20</string>
    <string name="venc5">25</string>
    <string name="venc6">30</string>
    <string name="error_nome">Nome não pode estar vazio!</string>
    <string name="foi_selecionado">foi selecionado</string>
    <string name="nada_selecionado">Informe seu genero, por gentileza!</string>
</resources>